# ejecutor-lotes-os

./: README.md
ctrllt/: ctrllt.c
docs/: Diseño.md  pdf_text.txt
ejecutor/: ejecutor.c
gesfich/: gesfich.c
gesprog/: gesprog.c
practica/: Cargo.toml  README.md
practica/aralmac/: input.txt
practica/aralmac/programas/: p-0001.json
practica/docs/: Diseño.md  ejecucion.md  explicacion.md
practica/scripts/: send.ps1  start.ps1  start.sh
practica/src/: aralmac.rs  estado.rs  ids.rs  ipc.rs  lib.rs  protocolo.rs
