[package]
name = "practica"
version = "0.1.0"
edition = "2024"
description = "Ejecutor de lotes — cuatro binarios (ctrllt, gesfich, gesprog, ejecutor) + librería compartida."
default-run = "ctrllt"

[dependencies]
# Añadir cuando implementes: serde, serde_json, etc.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }   # para argumentos
nix = { version = "0.29", features = ["fs", "unistd", "process", "signal"] }  # Linux: mkfifo, fork, exec, kill
