[package]
name = "practica"
version = "0.1.0"
edition = "2021"
description = "Ejecutor de lotes — cuatro binarios (ctrllt, gesfich, gesprog, ejecutor) + librería compartida."
default-run = "ctrllt"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
interprocess = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[[bin]]
name = "ctrllt"
path = "src/bin/ctrllt.rs"

[[bin]]
name = "gesfich"
path = "src/bin/gesfich.rs"

[[bin]]
name = "gesprog"
path = "src/bin/gesprog.rs"

[[bin]]
name = "ejecutor"
path = "src/bin/ejecutor.rs"
